Some minor fixes in the instructions text.

--- a/FizzBuzz/Views/Home/FizzBuzzPage.cshtml
+++ b/FizzBuzz/Views/Home/FizzBuzzPage.cshtml
@@ -5,12 +5,17 @@
         <div class="col border-2 border-end">
             <h1 class="fw-bold lh-1 mb-3">FizzBuzz</h1>
             <h4 class="lead">
-                Fizz Buz Application similar to the one made in Javascript, but this one is made in C#
+                Become a Spartan warrior one loop at a time!
+                This is a C# coding exercise using loops and MVC.
+                Write a short program that displays each number from 1 to 300.
+                For each multiple of 3, display "Fizz" instead of the number.
+                For each multiple of 5, display "Buzz" instead of the number.
+                For numbers which are multiples of both 3 and 5, display "FizzBuzz" instead of the number.
             </h4>
 
             <h2 class="mt-5 border-bottom border-2">Instructions</h2>
             <p>
-                Enter 2 numbers, then click on the button. Simple.
+                Enter a starting value and a ending value. Press the button and a table with results will appear.
             </p>
         </div>
         <div class="col">
