--- a/FizzBuzz/Views/Home/Index.cshtml
+++ b/FizzBuzz/Views/Home/Index.cshtml
@@ -8,7 +8,9 @@
             <div class="col order-last order-lg-first">
                 <h1 class="display-5 fw-bold lh-1 mb-3">THE-300 PRESENT FIZZBUZZ: A Coding Challenge</h1>
                 <h4 class="lead">
-                    Write a short program that displays each number from 1 to 100.
+                    Become a Spartan warrior one loop at a time!
+                    This is a C# coding exercise using loops and MVC.
+                    Write a short program that displays each number from 1 to 300.
                     For each multiple of 3, display "Fizz" instead of the number.
                     For each multiple of 5, display "Buzz" instead of the number.
                     For numbers which are multiples of both 3 and 5, display "FizzBuzz" instead of the number.
