Add link to github project.

--- a/FizzBuzz/Views/Home/FizzBuzzPage.cshtml
+++ b/FizzBuzz/Views/Home/FizzBuzzPage.cshtml
@@ -8,14 +8,14 @@
                 Become a Spartan warrior one loop at a time!
                 This is a C# coding exercise using loops and MVC.
                 Write a short program that displays each number from 1 to 300.
-                For each multiple of 3, display "Fizz" instead of the number.
-                For each multiple of 5, display "Buzz" instead of the number.
-                For numbers which are multiples of both 3 and 5, display "FizzBuzz" instead of the number.
+                For each multiple of fizz value, display "Fizz" instead of the number.
+                For each multiple of buzz value, display "Buzz" instead of the number.
+                For numbers which are multiples of both fizz and buzz, display "FizzBuzz" instead of the number.
             </h4>
 
             <h2 class="mt-5 border-bottom border-2">Instructions</h2>
             <p>
-                Enter a starting value and a ending value. Press the button and a table with results will appear.
+                Enter a value for fizz and a value for buzz. Press the button and a table with results will appear.
             </p>
         </div>
         <div class="col">
