--- a/FizzBuzz/Views/Home/Index.cshtml
+++ b/FizzBuzz/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
                     Write a short program that displays each number from 1 to 300.
                     For each multiple of fizz, display "Fizz" instead of the number.
                     For each multiple of buzz, display "Buzz" instead of the number.
-                    For numbers which are multiples of both 3 and 5, display "FizzBuzz" instead of the number.
+                    For numbers which are multiples of both fizz and buzz, display "FizzBuzz" instead of the number.
                 </h4>
                 <ul class="fa-ul pt-2 checklist">
                     <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap layout</li>
